[package]
name = "kanjitomo-rs"
description = "Rewrite of Kanjitomo OCR in rust"
version = "0.1.0"
authors = ["Kirill Mironov @ vetrokm@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
imageproc = "0.20.0"
thiserror = "1.0.16"
log = "0.4.8"
imgref = "1.4.3"
num-traits = "^0.2"
serde = { version = "1.0.106", features=["derive"] }
bincode = "1.2.1"
flate2 = "1.0.14"
rayon = "1.3.0"
crossbeam = "0.7.3"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"