[package]
name = "kanjitomo-rs"
description = "Rewrite of Kanjitomo OCR in rust"
version = "0.1.0"
authors = ["Kirill Mironov @ vetrokm@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use forked version of image crate until issue about reexporting FromColor trait is closed.
image = { git = "https://github.com/Drevoed/image", branch = "export-from-color" }
imageproc = { git = "https://github.com/Drevoed/imageproc", branch = "use-forked-image" }
palette = "0.5.0"
thiserror = "1.0.16"
log = "0.4.8"
num-traits = "^0.2"
serde = { version = "1.0.106", features=["derive"] }
bincode = "1.2.1"
flate2 = "1.0.14"
rayon = "1.3.0"
crossbeam = "0.7.3"
lazy_static = "1.4.0"
smart-default = "0.6.0"
bit = "0.1.1"
rulinalg = "0.4.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"